# Mandla-Rice-MRV-System-for-United-Nations

./: .gitignore  DEPLOYMENT.md  README.md  deploy-heroku.bat  deploy-heroku.ps1  deploy-heroku.sh  docker-compose.yml  netlify.toml  package-lock.json  package.json  server.js
backend/: BLOCKCHAIN_SETUP.md  SENTRY_SETUP.md  env.production  env.sample  h heroku master  package-lock.json  package.json  test-admin-dashboard.js  test-carbon-credit-marketplace.js  test-farm-details-analytics.js  test-farm-registration.js  test-farms.js  test-help-support.js  test-integrated-marketplace.js  test-mongo.js  test-notification-center.js  test-sentry.js  test-user-profile-management.js  tsconfig.json
backend/contracts/: CarbonCredit.sol
backend/contracts/soroban/: CarbonCreditToken.rs  Cargo.toml  README.md
backend/prisma/: schema.prisma
backend/routes/: marketplace.js
backend/scripts/: blockchain-check.js  check-contract-deployment.js  quick-blockchain-test.js  test-all-satellite-data.js  test-basic-contract.js  test-carbon-credit.js  test-cdse.js  test-deployed-contract.js  (+1 more)
contracts/: deploy-simple.cjs  env.sample  hardhat.config.cjs  package.json
docs/: ADMIN_DASHBOARD_SYSTEM.md  CARBON_CREDIT_MARKETPLACE_SYSTEM.md  FARM_DETAILS_ANALYTICS_SYSTEM.md  FARM_REGISTRATION_SYSTEM.md  GATES_OPEN_RESEARCH_API.md  HELP_SUPPORT_SYSTEM.md  INTEGRATED_MARKETPLACE_SYSTEM.md  NOTIFICATION_CENTER_SYSTEM.md  USER_PROFILE_MANAGEMENT_SYSTEM.md
frontend/: env.production  env.sample  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+102 files in other folders)
